maj section pricing

--- a/public/index.html
+++ b/public/index.html
@@ -272,28 +272,78 @@
     </div>
   </section>
 
-  <!-- Pricing (table simple) -->
-  <section class="section alt">
-    <div class="container">
-      <h2 class="section-title">Tarifs clairs et transparents</h2>
-      <div class="perks">
-        <div class="perk"><p>Pas de frais caches</p></div>
-        <div class="perk"><p>Annulation sans condtions</p></div>
-        <div class="perk"><p>Produits eco-friendly inclus</p></div>
+
+
+
+
+
+ <!-- Pricing (improved) -->
+<section class="section alt pricing" id="pricing">
+  <div class="container">
+    <h2 class="section-title">Transparent Pricing</h2>
+
+    <ul class="ticks">
+      <li>No hidden fees</li>
+      <li>Cancel anytime</li>
+      <li>Eco-friendly products included</li>
+    </ul>
+
+    <div class="pricing-card">
+      <div class="row head">
+        <div>Service</div>
+        <div>Starting at</div>
+        <div>What’s included</div>
       </div>
-      <div class="pricing-table">
-        <div class="row head">
-          <div>Service</div><div>from</div><div>Details inclus</div>
+
+      <div class="row">
+        <div class="cell label">Standard</div>
+        <div class="cell price">$119</div>
+        <div class="cell desc">
+          Visible surfaces (kitchen, bathroom, living/bedrooms), dusting, vacuum & mop, trash.
+          <span class="hint">Typical time: 2–3h · Best for upkeep</span>
         </div>
-        <div class="row"><div>Standard</div><div>$119</div><div>Surface visible</div></div>
-        <div class="row"><div>Deep</div><div>$149</div><div>+ Surface invisible</div></div>
-        <div class="row"><div>Extras</div><div>$20-30</div><div>Four, frigo, etc.</div></div>
       </div>
-      <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form" data-cta="pricing">Get Your Instant Quote (in 45s)</a>
+
+      <div class="row">
+        <div class="cell label">Deep</div>
+        <div class="cell price">$149</div>
+        <div class="cell desc">
+          Everything in Standard <strong>plus</strong> baseboards, grout edges, behind furniture,
+          detailed corners, appliance exteriors, extra polishing.
+          <span class="hint">Typical time: 3–4h · Best for first visit</span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="cell label">Extras</div>
+        <div class="cell price">$20–30</div>
+        <div class="cell desc">
+          Inside fridge/oven, interior windows, balcony, pet hair detail, etc.
+          <span class="hint">Add on request</span>
+        </div>
       </div>
     </div>
-  </section>
+
+    <p class="microcopy">
+      Pay <strong>after</strong> service completion. Taxes included.
+      Final price confirmed in your email quote.
+    </p>
+
+    <div class="cta-wrapper">
+      <a class="btn cta" href="#lead-form" data-cta="pricing">Get Your Instant Quote (in 45s)</a>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
 
   <!-- Social Proof (placeholder, à compléter plus tard) -->
  <section id="testimonials" class="section">
