maj2 sction pricing

--- a/public/index.html
+++ b/public/index.html
@@ -297,7 +297,7 @@
 
       <div class="row">
         <div class="cell label">Standard</div>
-        <div class="cell price">$119</div>
+        <div class="cell price">From $119</div>
         <div class="cell desc">
           Visible surfaces (kitchen, bathroom, living/bedrooms), dusting, vacuum & mop, trash.
           <span class="hint">Typical time: 2–3h · Best for upkeep</span>
@@ -306,7 +306,7 @@
 
       <div class="row">
         <div class="cell label">Deep</div>
-        <div class="cell price">$149</div>
+        <div class="cell price">From $149</div>
         <div class="cell desc">
           Everything in Standard <strong>plus</strong> baseboards, grout edges, behind furniture,
           detailed corners, appliance exteriors, extra polishing.
