maj section temoignages

--- a/public/index.html
+++ b/public/index.html
@@ -345,65 +345,64 @@
 
 
 
-  <!-- Social Proof (placeholder, à compléter plus tard) -->
- <section id="testimonials" class="section">
+ <section class="section reviews" id="reviews">
   <div class="container">
-    <h2 class="section-title">+320 foyers servis avec 5 etoiles</h2>
+    <h2 class="section-title">+320 Queens Families Rated Us 5★</h2>
+    <p class="section-subtitle">
+      Real families from Queens share their experience with Queens & Clean.
+    </p>
 
-    <div class="reviews-grid" role="list">
-      <!-- Card 1 -->
-      <article class="review-card" role="listitem">
-        <header class="review-head">
-          <div class="avatar" aria-hidden="true">RG</div>
-          <div class="reviewer">
-            <div class="name">Romain G.</div>
-            <div class="stars" aria-label="5 out of 5 stars">
-              <span aria-hidden="true">★★★★★</span>
-            </div>
-          </div>
-        </header>
-        <p class="review-text">
-          Service ultra fiable et soigné. Communication claire, maison impeccable
-          en respectant nos enfants et notre chien. On a enfin l’esprit libre !
-        </p>
-      </article>
-
-      <!-- Card 2 -->
-      <article class="review-card" role="listitem">
-        <header class="review-head">
-          <div class="avatar" aria-hidden="true">CE</div>
-          <div class="reviewer">
-            <div class="name">Cédric E.</div>
-            <div class="stars" aria-label="5 out of 5 stars">
-              <span aria-hidden="true">★★★★★</span>
-            </div>
-          </div>
-        </header>
-        <p class="review-text">
-          Organisation pro, résultats constants. Les détails comptent vraiment
-          (joints, plinthes, miroirs). Parfait pour notre rythme chargé.
-        </p>
-      </article>
-
-      <!-- Card 3 -->
-      <article class="review-card" role="listitem">
-        <header class="review-head">
-          <div class="avatar" aria-hidden="true">WB</div>
-          <div class="reviewer">
-            <div class="name">Wilfrid B.</div>
-            <div class="stars" aria-label="5 out of 5 stars">
-              <span aria-hidden="true">★★★★★</span>
-            </div>
-          </div>
-        </header>
-        <p class="review-text">
-          Très belle expérience : ponctualité, soin des surfaces blanches, odeur
-          fraîche discrète. Rapport qualité/prix top, on recommande.
-        </p>
-      </article>
+    <!-- Review 1 (Mom with kids) -->
+    <div class="review">
+      <div class="avatar">SM</div>
+      <div class="content">
+        <h3>Sofia M. — Astoria</h3>
+        <p class="stars">★★★★★</p>
+        <p>Between school mornings and two little ones, I was always behind on cleaning. Queens & Clean brought calm back to my home. Kind, fast, and respectful with kids — I finally have my weekends again!</p>
+      </div>
     </div>
 
-    <!-- CTA vers le formulaire -->
+    <!-- Review 2 (Mom with kids) -->
+    <div class="review">
+      <div class="avatar">MG</div>
+      <div class="content">
+        <h3>Melissa G. — Forest Hills</h3>
+        <p class="stars">★★★★★</p>
+        <p>They show up exactly on time, and my apartment smells like a spa afterwards. Even my 7-year-old noticed: “Mom, it feels happy here!” I love that energy.</p>
+      </div>
+    </div>
+
+    <!-- Review 3 (Mom with newborn) -->
+    <div class="review">
+      <div class="avatar">DP</div>
+      <div class="content">
+        <h3>Daniela P. — Flushing</h3>
+        <p class="stars">★★★★★</p>
+        <p>After my second baby, I felt overwhelmed. The team was quiet during naps, so gentle and efficient. They helped me breathe again — truly a lifesaver.</p>
+      </div>
+    </div>
+
+    <!-- Review 4 (Active couple) -->
+    <div class="review">
+      <div class="avatar">RC</div>
+      <div class="content">
+        <h3>Ryan &amp; Chloe D. — Bayside</h3>
+        <p class="stars">★★★★★</p>
+        <p>We both work long hours and come home tired. Queens & Clean is our Friday reset. The place shines, smells fresh, and our stress melts away. Worth every dollar.</p>
+      </div>
+    </div>
+
+    <!-- Review 5 (Active couple) -->
+    <div class="review">
+      <div class="avatar">JM</div>
+      <div class="content">
+        <h3>Jordan &amp; Maya T. — Astoria</h3>
+        <p class="stars">★★★★★</p>
+        <p>We stopped arguing about chores since hiring them! Super polite, detail-oriented, and always the same friendly team. Every visit feels like a small luxury.</p>
+      </div>
+    </div>
+
+    <!-- CTA -->
     <div class="cta-wrapper">
       <a href="#quote-form" class="btn cta" data-cta="testimonials">Get Your Instant Quote (in 45s)</a>
     </div>
